--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <title>Odontologia - Modelo</title>
 		<link rel="icon" type="image/png" href="./assets/media/favicon.ico" />
       <link href="./assets/css/custom-font-awesome.css" rel="stylesheet" />
-		<link href="./assets/css/style.css" rel="stylesheet" />
+		<link href="./assets/css/style.min.css" rel="stylesheet" />
    </head>
 
    <body>
